--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -53,19 +53,19 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
       <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
-        <img src="../assets/images/Debayan.jpg" alt="Debayan" class="avatar" />
+        <img src="../assets/organiser/Debayan.jpg" alt="Debayan" class="avatar" />
         <h2 class="text-xl font-semibold mb-1">Debayan</h2>
         <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
 
       <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
-        <img src="../assets/images/Gourav.jpg" alt="Gourav" class="avatar" />
+        <img src="../assets/organiser/Gourav.jpg" alt="Gourav" class="avatar" />
         <h2 class="text-xl font-semibold mb-1">Gourav</h2>
         <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
 
       <div class="card bg-white rounded-2xl shadow-lg p-6 text-center">
-        <img src="../assets/images/Jyotishka.jpg" alt="Jyotishka" class="avatar" />
+        <img src="../assets/organiser/Jyotishka.jpg" alt="Jyotishka" class="avatar" />
         <h2 class="text-xl font-semibold mb-1">Jyotishka</h2>
         <p class="text-gray-700 text-sm">Co-Organizer</p>
       </div>
@@ -93,17 +93,17 @@
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="winner-card text-center">
-          <img src="../assets/images/Winner2024.jpg" alt="2024 Winners" class="winner-photo" />
+          <img src="../assets/wall-of-frame/Winner2024.jpg" alt="2024 Winners" class="winner-photo" />
           <h3 class="text-lg font-semibold mt-4">2024 Champions</h3>
         </div>
 
         <div class="winner-card text-center">
-          <img src="../assets/images/Winner2023.jpg" alt="2023 Winners" class="winner-photo" />
+          <img src="../assets/wall-of-frame/Winner2023.jpg" alt="2023 Winners" class="winner-photo" />
           <h3 class="text-lg font-semibold mt-4">2023 Champions</h3>
         </div>
 
         <div class="winner-card text-center">
-          <img src="../assets/images/Winner2022.jpg" alt="2022 Winners" class="winner-photo" />
+          <img src="../assets/wall-of-frame/Winner2022.jpg" alt="2022 Winners" class="winner-photo" />
           <h3 class="text-lg font-semibold mt-4">2022 Champions</h3>
         </div>
       </div>
