--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Project styles -->
-  <link rel="stylesheet" href="../assets/css/wae-colors.css">
+  <link rel="stylesheet" href="./assets/css/wae-colors.css">
 </head>
 
 <body class="bg-white text-[#0b1220] flex flex-col min-h-screen">
