--- a/tournaments/independence_cup_2025/independence_cup_2025.html
+++ b/tournaments/independence_cup_2025/independence_cup_2025.html
@@ -1,221 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Independence Cup 2025 - We Are Eleven</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background: #f9fafb;
-      color: #1e293b;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Independence Cup 2025 — We Are Eleven</title>
 
-    .nav-link {
-      color: #4b5563;
-      font-weight: 500;
-      text-decoration: none;
-      transition: color 0.2s ease;
-    }
+<script src="https://cdn.tailwindcss.com"></script>
 
-    .nav-link:hover {
-      color: #374151;
-    }
+<style>
+body {
+  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+  background:#f8fafc;
+  color:#0f172a;
+}
 
-    .nav-link.active {
-      color: #dc2626;
-    }
+/* Sticky pill nav */
+.pillbar{
+  position:sticky; top:0; z-index:50;
+  background:rgba(248,250,252,.96);
+  backdrop-filter:blur(6px);
+  border-bottom:1px solid #e2e8f0;
+}
+.pill{
+  padding:.45rem 1.1rem;
+  border-radius:9999px;
+  font-weight:600;
+  font-size:.9rem;
+  white-space:nowrap;
+  transition:.2s;
+}
+.pill.active{
+  background:#0f172a;
+  color:#fff;
+  box-shadow:0 8px 20px rgba(15,23,42,.3);
+  transform:scale(1.05);
+}
+.pill:hover{background:#e2e8f0}
 
-    h2.section-title {
-      @apply text-xl font-semibold text-red-600 border-b pb-1 mb-3;
-    }
-  </style>
+section[data-tab]{display:none}
+section[data-tab].active{display:block}
+</style>
 </head>
-<body class="text-black">
 
-  <!-- ✅ Header -->
-  <div id="site-header"></div>
+<body class="min-h-screen">
 
-  <!-- ✅ Main layout -->
-  <main class="container mx-auto px-4 md:px-0 py-10 grid grid-cols-1 md:grid-cols-3 gap-10">
+<!-- ================= HEADER ================= -->
+<header class="bg-white shadow-sm text-center py-10">
+  <h1 class="text-4xl md:text-5xl font-extrabold">🏆 Independence Cup 2025</h1>
+  <p class="mt-2 text-slate-600">We Are Eleven — Complete Tournament Recap</p>
+</header>
 
-    <!-- Main content -->
-    <section class="md:col-span-2 bg-white rounded-2xl shadow p-8">
-      <h1 class="text-3xl font-extrabold mb-6 text-gray-900">🏆 Independence Cup 2025</h1>
+<!-- ================= STICKY PILLS ================= -->
+<nav class="pillbar">
+  <div class="max-w-7xl mx-auto px-4 py-3 flex gap-2 overflow-x-auto">
+    <button class="pill active" data-btn="overview">Overview</button>
+    <button class="pill" data-btn="teams">Teams</button>
+    <button class="pill" data-btn="fixtures">Fixtures</button>
+    <button class="pill" data-btn="results">Results</button>
+    <button class="pill" data-btn="gallery">Gallery</button>
+  </div>
+</nav>
 
-      <!-- Event Details -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-8 text-sm text-slate-700">
-        <p><strong>📅 Event Date:</strong><br>24 August 2025</p>
-        <p><strong>📍 Venue:</strong><br><a href="https://maps.app.goo.gl/1aMXNvbHJBS5QxwT7" target="_blank" class="text-red-600 hover:underline">Turf XL</a></p>
-        <p><strong>⏰ Time:</strong><br>9:00 AM – 6:00 PM</p>
-        <p><strong>👥 Organizers:</strong><br>Debayan, Gourav &amp; Jyotishka</p>
-        <p><strong>👥 Captains:</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan &amp; Akash Jr</p>
-        <p><strong>⚽ Number of Teams:</strong><br>6</p>
+<main class="max-w-7xl mx-auto px-4 py-10 space-y-16">
+
+<!-- ================= OVERVIEW ================= -->
+<section data-tab="overview" class="active">
+  <div class="bg-white rounded-2xl shadow p-8 space-y-6">
+    <h2 class="text-3xl font-bold">Tournament Overview</h2>
+
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 text-sm">
+      <p><strong>📅 Date:</strong><br>24 August 2025</p>
+      <p><strong>📍 Venue:</strong><br>Turf XL</p>
+      <p><strong>⏰ Time:</strong><br>9:00 AM – 6:00 PM</p>
+      <p><strong>⚽ Teams:</strong><br>6</p>
+      <p><strong>👥 Organizers:</strong><br>Debayan, Gourav & Jyotishka</p>
+      <p><strong>🎖 Captains:</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan, Akash Jr</p>
+    </div>
+
+    <div class="border-t pt-6 text-slate-700 space-y-3 text-sm">
+      <p>• Match duration: 16 minutes (8+8)</p>
+      <p>• 2 groups of 3 teams</p>
+      <p>• Win: 3 pts | Draw: 1 pt</p>
+      <p>• Top 2 teams qualify</p>
+      <p class="text-red-600 font-semibold">
+        ⚠ Organizers are not liable for injuries or loss.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= TEAMS ================= -->
+<section data-tab="teams">
+  <div class="bg-white rounded-2xl shadow p-8 space-y-8">
+    <h2 class="text-3xl font-bold">Teams & Players</h2>
+
+    <!-- TEAM -->
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">Thunderbolt ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Ayon Roy (Captain)</li>
+          <li>Arnab Talukdar</li>
+          <li>Sourav Acharya</li>
+          <li>Proloy Malik</li>
+          <li>Siddhant Ameria</li>
+          <li>Kingshuk Banerjee</li>
+          <li>Aritra Adhikari</li>
+        </ul>
       </div>
 
-      <!-- Guidelines -->
-      <h2 class="section-title">Tournament Guidelines</h2>
-      <article class="space-y-6 text-slate-700 leading-relaxed text-sm">
-        
-        <section>
-          <h3 class="font-semibold mb-1">Event Overview</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Celebrating Independence Day with a spirited football tournament at Turf XL.</li>
-            <li>An opportunity to enjoy competitive play, sportsmanship, and camaraderie.</li>
-          </ul>
-        </section>
-
-        <section class="bg-red-50 border-l-4 border-red-500 p-4 rounded">
-          <h3 class="font-semibold mb-1 text-red-700">Important Notice</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Organizers will not be liable for injuries, property loss, or death of any player.</li>
-            <li>Teams must carry their own medical kits and individual water bottles.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Field & Equipment</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Field Size: 70 x 110 ft, clearly marked boundaries.</li>
-            <li>Ball: Regulation Size 5 football.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Team Composition</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Minimum 7 players (including 1 goalkeeper).</li>
-            <li>Maximum 1 substitute allowed.</li>
-            <li>Players may represent only one team.</li>
-            <li>Maximum 6 players on the field at once; rolling substitutions.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Attire & Equipment</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Teams must wear identical or similar-colored jerseys (pre-assigned, no changes).</li>
-            <li>Footwear: Spikes or joggers only.</li>
-            <li>No sharp accessories; nails must be trimmed.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Match Format</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Match Duration: 16 minutes (8 per half) + 2 min half-time.</li>
-            <li>Final duration will be announced at venue.</li>
-            <li>Each player must play at least 15 minutes in group stage.</li>
-            <li>Strict timing; no postponements.</li>
-            <li>Teams with fewer than 6 players must play short.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Competition Structure</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>2 groups of 3 teams each.</li>
-            <li>Round-robin format (2 matches per pairing).</li>
-            <li>Points: Win – 3, Draw – 1.</li>
-            <li>Tie-breakers: Goal Difference → Goals Scored → Coin Toss.</li>
-            <li>Knockouts: Semi-finals, 3rd place match, and Final.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Kick-off & Restarts</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Coin toss decides ends and first kick-off.</li>
-            <li>After goals, restart from center spot by opponents.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Fouls & Misconduct</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>2 yellows in one match → Red card for that match.</li>
-            <li>2 yellows across matches → 12-min ban in next match.</li>
-            <li>3 yellows in tournament → Ban from next match.</li>
-            <li>Direct red → Ban current + next match.</li>
-            <li>Referee’s decision is final.</li>
-            <li>Violent conduct may lead to disqualification.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Free Kicks, Corners & Throw-ins</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>Referee decides direct/indirect free kicks.</li>
-            <li>Indirect must touch another player.</li>
-            <li>1m minimum distance for free kicks.</li>
-            <li>Standard corner and throw-in rules apply.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Tie-breakers (Knockout Stage)</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>3 penalty kicks per team.</li>
-            <li>If tied → Sudden death penalties (2 rounds).</li>
-            <li>If still tied → Goal Difference → Goals Scored → Coin Toss.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Awards & Recognition</h3>
-          <ul class="list-disc list-inside space-y-1">
-            <li>🏆 Winner: Trophy + Gold Medals</li>
-            <li>🥈 Runner-up: Trophy + Silver Medals</li>
-            <li>🥉 Third Place: Bronze Medals</li>
-            <li>🎯 Individual Awards: Top Goal Scorer, Best Goalkeeper, Playmaker, Best Defender, Man of the Match</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3 class="font-semibold mb-1">Closing Ceremony</h3>
-          <p>Award distribution begins post 5:00 PM.</p>
-        </section>
-      </article>
-    </section>
-
-    <!-- Sidebar / Notice Board -->
-    <aside class="bg-gradient-to-r from-blue-100 via-blue-50 to-blue-100 border-l-4 border-blue-500 rounded-xl p-5 shadow-md">
-      <div class="flex items-center gap-3">
-        <span class="text-blue-600 text-2xl animate-bounce">📢</span>
-        <h2 class="text-2xl font-bold text-blue-800">Notice Board</h2>
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">Red Bulls Eleven ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Subhojit Dutta (Captain)</li>
+          <li>Soumadeep Dutta</li>
+          <li>Jeffin Mathew</li>
+          <li>Yash Agarwal</li>
+          <li>Shivaditya Gunin</li>
+          <li>Arghadeep Das</li>
+          <li>Akash Mukherjee</li>
+          <li>Sourav Das</li>
+        </ul>
       </div>
-      <p class="mt-3 text-base text-blue-700 leading-relaxed">
-        ✅ <strong>The team fixtures have been released!</strong><br>
-        All players and teams are requested to check the 
-        <span class="font-semibold text-blue-900">Fixtures Tab</span> for details.
-      </p>
-      <p class="mt-4 text-base text-blue-700 leading-relaxed">
-        🔴 <strong>Track matches in real-time!</strong><br>
-        Visit the 
-        <a href="live_score.html" class="text-blue-800 font-semibold underline hover:text-blue-900">
-          Live Score Page
-        </a> 
-        for live updates, scorers, standings & knockouts.
-      </p>
-    </aside>
-  </main>
 
-  <!-- ✅ Footer -->
-  <footer class="bg-gray-950 py-6 text-center text-gray-400 mt-12">
-    <p>© 2025 Football Community. All Rights Reserved.</p>
-  </footer>
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">Messiah FC ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Ritam Chowdhury (Captain)</li>
+          <li>Dhruv</li>
+          <li>Biswajit</li>
+          <li>Rishov</li>
+          <li>Soumik</li>
+        </ul>
+      </div>
 
-  <script type="module">
-    import { injectHeader } from "./tournament_header.js";
-    import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
-    injectHeader("#site-header", { active: "tournaments" });
-    try {
-      const maps = await loadTeams();
-      hydrateTeamLogos(document, maps);
-    } catch (e) {
-      console.warn("Teams JSON load failed:", e);
-    }
-  </script>
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">White Panthers ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Monty (Captain)</li>
+          <li>Soumik</li>
+          <li>Subhanjan</li>
+          <li>Tintin</li>
+        </ul>
+      </div>
+
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">Strawhat Pirates ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Shubanjan (Captain)</li>
+          <li>Supratim</li>
+          <li>Others</li>
+        </ul>
+      </div>
+
+      <div class="border rounded-xl p-4">
+        <h3 class="font-bold text-lg mb-2">Amigos FC ⭐</h3>
+        <ul class="text-sm space-y-1">
+          <li>Akash Jr (Captain)</li>
+          <li>Vasu</li>
+          <li>Krishnendu</li>
+          <li>Others</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- ================= FIXTURES ================= -->
+<section data-tab="fixtures">
+  <div class="bg-white rounded-2xl shadow p-8 space-y-4">
+    <h2 class="text-3xl font-bold">Fixtures</h2>
+
+    <div class="border rounded-xl p-4 flex justify-between">
+      <span>Thunderbolt vs Messiah FC</span><span>Matchday 1</span>
+    </div>
+    <div class="border rounded-xl p-4 flex justify-between">
+      <span>Amigos FC vs Strawhat Pirates</span><span>Matchday 2</span>
+    </div>
+    <div class="border rounded-xl p-4 flex justify-between">
+      <span>White Panthers vs Thunderbolt</span><span>Matchday 3</span>
+    </div>
+    <div class="border rounded-xl p-4 flex justify-between">
+      <span>Red Bulls Eleven vs Amigos FC</span><span>Matchday 4</span>
+    </div>
+  </div>
+</section>
+
+<!-- ================= RESULTS ================= -->
+<section data-tab="results">
+  <div class="bg-white rounded-2xl shadow p-8 space-y-8">
+    <h2 class="text-3xl font-bold text-center">Final Results</h2>
+
+    <div class="bg-amber-100 border-2 border-amber-400 rounded-xl p-6 text-center">
+      <h3 class="text-2xl font-extrabold">🏆 Champion</h3>
+      <p class="text-xl font-bold mt-1">Messiah FC</p>
+    </div>
+
+    <div class="bg-slate-100 rounded-xl p-4 text-center">
+      <h3 class="font-bold">🥈 Runner-up</h3>
+      <p class="text-lg">Strawhat Pirates</p>
+    </div>
+
+    <div class="border rounded-xl p-4">
+      <div class="flex justify-between font-semibold">
+        <span>Thunderbolt</span>
+        <span>1 – 3</span>
+        <span>Messiah FC</span>
+      </div>
+      <p class="text-sm text-slate-600 mt-2">
+        Scorers: Tintin • Rishov (2) • Biswajit
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= GALLERY ================= -->
+<section data-tab="gallery">
+  <div class="bg-white rounded-2xl shadow p-8">
+    <h2 class="text-3xl font-bold mb-6">Tournament Gallery</h2>
+    <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="Messiah FC Team.jpg" class="rounded-xl object-cover">
+      <img src="White Panthers Team.jpg" class="rounded-xl object-cover">
+      <img src="Thunderbolt Team.jpg" class="rounded-xl object-cover">
+      <img src="Amingos FC Team.jpg" class="rounded-xl object-cover">
+    </div>
+  </div>
+</section>
+
+</main>
+
+<footer class="text-center py-8 text-sm text-slate-500">
+© 2025 We Are Eleven • Independence Cup
+</footer>
+
+<script>
+const pills=document.querySelectorAll('.pill');
+const tabs=document.querySelectorAll('[data-tab]');
+pills.forEach(p=>{
+  p.onclick=()=>{
+    pills.forEach(x=>x.classList.remove('active'));
+    tabs.forEach(t=>t.classList.remove('active'));
+    p.classList.add('active');
+    document.querySelector(`[data-tab="${p.dataset.btn}"]`).classList.add('active');
+  }
+});
+</script>
+
 </body>
 </html>
