--- a/pages/register.html
+++ b/pages/register.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Project styles -->
-  <link rel="stylesheet" href="../css/wae-colors.css">
+  <link rel="stylesheet" href="./css/wae-colors.css">
 </head>
 
 <body class="wae-bg flex flex-col min-h-screen">
