--- a/pages/admin.html
+++ b/pages/admin.html
@@ -6,7 +6,10 @@
   <title>Admin Login - We Are Eleven</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
-
+  
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
+  
   <style>
     body {
       font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
