--- a/pages/create_poll.html
+++ b/pages/create_poll.html
@@ -6,6 +6,10 @@
   <title>Create Match Poll — Admin</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
+    
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
+  
 </head>
 
 <body class="bg-gray-900 text-white min-h-screen flex flex-col">
