--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,10 @@
   <title>Login — We Are Eleven</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
-
+  
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
+  
   <!-- Project styles -->
   <link rel="stylesheet" href="../css/wae-colors.css">
 </head>
