--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,7 +6,10 @@
   <title>User Profile — We Are Eleven</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
-
+  
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
+  
   <style>
     .cover-ghost { background-blend-mode: multiply; }
     .progress-bg { background: linear-gradient(90deg, rgba(34,197,94,.9), rgba(34,197,94,.6)); }
