--- a/pages/join.html
+++ b/pages/join.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="./assets/group-logo/we_are_eleven_logo.jpg" />
   
   <!-- Project styles -->
-  <link rel="stylesheet" href="../assets/css/wae-colors.css">
+  <link rel="stylesheet" href="../css/wae-colors.css">
 </head>
 
 <body class="wae-bg flex flex-col min-h-screen">
