--- a/tournaments/independence_cup_2025/independence_cup_2025.html
+++ b/tournaments/independence_cup_2025/independence_cup_2025.html
@@ -65,27 +65,146 @@ section[data-tab].active{display:block}
 
 <!-- ================= OVERVIEW ================= -->
 <section data-tab="overview" class="active">
-  <div class="bg-white rounded-2xl shadow p-8 space-y-6">
-    <h2 class="text-3xl font-bold">Tournament Overview</h2>
+  <div class="bg-white rounded-2xl shadow p-8 space-y-10">
 
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 text-sm">
-      <p><strong>📅 Date:</strong><br>24 August 2025</p>
-      <p><strong>📍 Venue:</strong><br>Turf XL</p>
-      <p><strong>⏰ Time:</strong><br>9:00 AM – 6:00 PM</p>
-      <p><strong>⚽ Teams:</strong><br>6</p>
-      <p><strong>👥 Organizers:</strong><br>Debayan, Gourav & Jyotishka</p>
-      <p><strong>🎖 Captains:</strong><br>Subhojit, Ritam, Monty, Subhamoy, Shubanjan, Akash Jr</p>
-    </div>
-
-    <div class="border-t pt-6 text-slate-700 space-y-3 text-sm">
-      <p>• Match duration: 16 minutes (8+8)</p>
-      <p>• 2 groups of 3 teams</p>
-      <p>• Win: 3 pts | Draw: 1 pt</p>
-      <p>• Top 2 teams qualify</p>
-      <p class="text-red-600 font-semibold">
-        ⚠ Organizers are not liable for injuries or loss.
+    <!-- TITLE -->
+    <div>
+      <h2 class="text-3xl font-extrabold">🏆 Independence Cup 2025</h2>
+      <p class="text-slate-600 mt-1">
+        Celebrating Independence Day with competitive football & sportsmanship
       </p>
     </div>
+
+    <!-- EVENT INFO -->
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 text-sm">
+      <div>
+        <p class="font-semibold">📅 Event Date</p>
+        <p>24 August 2025</p>
+      </div>
+      <div>
+        <p class="font-semibold">📍 Venue</p>
+        <p>Turf XL</p>
+      </div>
+      <div>
+        <p class="font-semibold">⏰ Time</p>
+        <p>9:00 AM – 6:00 PM</p>
+      </div>
+      <div>
+        <p class="font-semibold">👥 Organizers</p>
+        <p>Debayan, Gourav & Jyotishka</p>
+      </div>
+      <div>
+        <p class="font-semibold">👥 Captains</p>
+        <p>
+          Subhojit, Ritam, Monty, Subhamoy,  
+          Shubanjan & Akash Jr
+        </p>
+      </div>
+      <div>
+        <p class="font-semibold">⚽ Number of Teams</p>
+        <p>6</p>
+      </div>
+    </div>
+
+    <!-- IMPORTANT NOTICE -->
+    <div class="bg-red-50 border border-red-200 rounded-xl p-4 text-sm">
+      <p class="font-semibold text-red-700 mb-1">⚠ Important Notice</p>
+      <ul class="list-disc pl-5 space-y-1 text-red-700">
+        <li>Organizers are not liable for injuries, property loss, or death.</li>
+        <li>Teams must carry their own medical kits.</li>
+        <li>Each player must bring their own water bottle.</li>
+      </ul>
+    </div>
+
+    <!-- FIELD & EQUIPMENT -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Field & Equipment</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>Field size: 70 × 110 ft with marked boundaries</li>
+        <li>Ball: Regulation Size 5 football</li>
+      </ul>
+    </div>
+
+    <!-- TEAM COMPOSITION -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Team Composition</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>Minimum 7 players (including goalkeeper)</li>
+        <li>Maximum 1 substitute allowed</li>
+        <li>Maximum 6 players on field at once</li>
+        <li>Rolling substitutions permitted</li>
+        <li>Players may represent only one team</li>
+      </ul>
+    </div>
+
+    <!-- ATTIRE -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Attire & Equipment</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>Identical or similar-colored jerseys (pre-assigned)</li>
+        <li>Footwear: Spikes or joggers only</li>
+        <li>No sharp accessories; nails must be trimmed</li>
+      </ul>
+    </div>
+
+    <!-- MATCH FORMAT -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Match Format</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>Match duration: 16 minutes (8 per half)</li>
+        <li>2-minute half-time break</li>
+        <li>Each player must play at least 15 minutes in group stage</li>
+        <li>Strict match timing; no postponements</li>
+        <li>Teams with fewer than 6 players must continue short</li>
+      </ul>
+    </div>
+
+    <!-- COMPETITION STRUCTURE -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Competition Structure</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>2 groups of 3 teams</li>
+        <li>Round-robin format</li>
+        <li>Points: Win – 3 | Draw – 1</li>
+        <li>
+          Tie-breakers: Goal Difference → Goals Scored → Coin Toss
+        </li>
+        <li>Semi-finals, 3rd place match & Final</li>
+      </ul>
+    </div>
+
+    <!-- DISCIPLINE -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Fouls & Discipline</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>2 yellows in a match → Red card (that match)</li>
+        <li>2 yellows across matches → 12-minute ban next match</li>
+        <li>3 yellows in tournament → Ban next match</li>
+        <li>Direct red → Ban current & next match</li>
+        <li>Referee’s decision is final</li>
+      </ul>
+    </div>
+
+    <!-- AWARDS -->
+    <div>
+      <h3 class="text-xl font-bold mb-3">Awards & Recognition</h3>
+      <ul class="list-disc pl-6 text-sm space-y-1 text-slate-700">
+        <li>🏆 Winner – Trophy + Gold Medals</li>
+        <li>🥈 Runner-up – Trophy + Silver Medals</li>
+        <li>🥉 Third Place – Bronze Medals</li>
+        <li>
+          🎯 Individual Awards: Top Scorer, Best Goalkeeper,
+          Playmaker, Best Defender, Man of the Match
+        </li>
+      </ul>
+    </div>
+
+    <!-- CLOSING -->
+    <div class="border-t pt-6 text-sm text-slate-600">
+      <p class="font-semibold">Closing Ceremony</p>
+      <p>Award distribution begins after 5:00 PM.</p>
+    </div>
+
   </div>
 </section>
 
