--- a/tournaments/independence_cup_2025/independence_cup_2025.html
+++ b/tournaments/independence_cup_2025/independence_cup_2025.html
@@ -211,15 +211,25 @@ section[data-tab].active{display:block}
 <!-- ================= TEAMS ================= -->
 <section data-tab="teams">
   <div class="bg-white rounded-2xl shadow p-8 space-y-8">
-    <h2 class="text-3xl font-bold">Teams & Players</h2>
+    <div>
+      <h2 class="text-3xl font-bold">Teams</h2>
+      <p class="text-slate-600 mt-1 text-sm">
+        Squad lists for Independence Cup 2025
+      </p>
+    </div>
 
-    <!-- TEAM -->
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">Thunderbolt ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Ayon Roy (Captain)</li>
+      <!-- TEAM CARD -->
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">Thunderbolt</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Ayon Roy</li>
           <li>Arnab Talukdar</li>
           <li>Sourav Acharya</li>
           <li>Proloy Malik</li>
@@ -229,10 +239,15 @@ section[data-tab].active{display:block}
         </ul>
       </div>
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">Red Bulls Eleven ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Subhojit Dutta (Captain)</li>
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">Red Bulls Eleven</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Subhojit Dutta</li>
           <li>Soumadeep Dutta</li>
           <li>Jeffin Mathew</li>
           <li>Yash Agarwal</li>
@@ -243,43 +258,77 @@ section[data-tab].active{display:block}
         </ul>
       </div>
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">Messiah FC ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Ritam Chowdhury (Captain)</li>
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">Messiah FC</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Ritam Chowdhury</li>
           <li>Dhruv</li>
-          <li>Biswajit</li>
-          <li>Rishov</li>
-          <li>Soumik</li>
+          <li>Biswajit Karmakar</li>
+          <li>Risove Shaw</li>
+          <li>Satyaki Sarkar</li>
+          <li>Ayan Das</li>
+          <li>Dipanjan Mazumder</li>
         </ul>
       </div>
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">White Panthers ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Monty (Captain)</li>
-          <li>Soumik</li>
-          <li>Subhanjan</li>
-          <li>Tintin</li>
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">White Panthers</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Shubhanjan Basu</li>
+          <li>Rupayan Chakraborty</li>
+          <li>Soumik Mukherjee</li>
+          <li>Shardendu Lahiri</li>
+          <li>Subhayan Banerjee</li>
+          <li>Pulak Dowari</li>
+          <li>Sagnik Chakraborty</li>
         </ul>
       </div>
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">Strawhat Pirates ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Shubanjan (Captain)</li>
-          <li>Supratim</li>
-          <li>Others</li>
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">Strawhat Pirates</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Srinjoy Kundu</li>
+          <li>Arko Dutta</li>
+          <li>Suvam Chakraborty</li>
+          <li>Dibwayan Trivedi</li>
+          <li>Supratim Sengupta</li>
+          <li>Aman Pandey</li>
+          <li>Ankit Aich</li>
+          <li class="text-slate-400">Others</li>
         </ul>
       </div>
 
-      <div class="border rounded-xl p-4">
-        <h3 class="font-bold text-lg mb-2">Amigos FC ⭐</h3>
-        <ul class="text-sm space-y-1">
-          <li>Akash Jr (Captain)</li>
-          <li>Vasu</li>
-          <li>Krishnendu</li>
-          <li>Others</li>
+      <div class="rounded-xl border border-slate-200 p-5 hover:shadow-md transition">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="font-semibold text-lg">Amigos FC</h3>
+          <span class="text-xs font-medium px-2 py-0.5 rounded-full bg-slate-100 text-slate-700">
+            Captain
+          </span>
+        </div>
+        <ul class="text-sm space-y-1 text-slate-700">
+          <li class="font-medium text-slate-900">Subhamoy Das</li>
+          <li>Aditya Chakraborty</li>
+          <li>Vasu Gupta</li>
+          <li>Krishnendu Mondal</li>
+          <li>Sanchay Bose</li>
+          <li>Rahul Sarkar</li>
+          <li>Kaustav Guha Mazumdar</li>
+          <li class="text-slate-400">Others</li>
         </ul>
       </div>
 
