--- a/tournaments/independence_cup_2025/independence_cup_2025.html
+++ b/tournaments/independence_cup_2025/independence_cup_2025.html
@@ -338,21 +338,66 @@ section[data-tab].active{display:block}
 
 <!-- ================= FIXTURES ================= -->
 <section data-tab="fixtures">
-  <div class="bg-white rounded-2xl shadow p-8 space-y-4">
-    <h2 class="text-3xl font-bold">Fixtures</h2>
+  <div class="bg-white rounded-2xl shadow p-8 space-y-10">
 
-    <div class="border rounded-xl p-4 flex justify-between">
-      <span>Thunderbolt vs Messiah FC</span><span>Matchday 1</span>
+    <!-- TITLE -->
+    <div>
+      <h2 class="text-3xl font-bold">Fixtures</h2>
+      <p class="text-sm text-slate-600 mt-1">
+        Group stage match schedule
+      </p>
     </div>
-    <div class="border rounded-xl p-4 flex justify-between">
-      <span>Amigos FC vs Strawhat Pirates</span><span>Matchday 2</span>
+
+    <!-- ================= GROUP A ================= -->
+    <div class="space-y-4">
+      <div class="flex items-center justify-between">
+        <h3 class="text-xl font-semibold">Group A</h3>
+        <span class="text-xs bg-slate-100 px-3 py-1 rounded-full text-slate-700">
+          Thunderbolt · Messiah FC · White Panthers
+        </span>
+      </div>
+
+      <div class="border border-slate-200 rounded-xl divide-y text-sm">
+        <div class="flex items-center justify-between px-5 py-4">
+          <span class="font-medium">Thunderbolt vs Messiah FC</span>
+          <span class="text-slate-500">Matchday 1</span>
+        </div>
+        <div class="flex items-center justify-between px-5 py-4 bg-slate-50">
+          <span class="font-medium">White Panthers vs Thunderbolt</span>
+          <span class="text-slate-500">Matchday 2</span>
+        </div>
+        <div class="flex items-center justify-between px-5 py-4">
+          <span class="font-medium">Messiah FC vs White Panthers</span>
+          <span class="text-slate-500">Matchday 3</span>
+        </div>
+      </div>
     </div>
-    <div class="border rounded-xl p-4 flex justify-between">
-      <span>White Panthers vs Thunderbolt</span><span>Matchday 3</span>
+
+    <!-- ================= GROUP B ================= -->
+    <div class="space-y-4">
+      <div class="flex items-center justify-between">
+        <h3 class="text-xl font-semibold">Group B</h3>
+        <span class="text-xs bg-slate-100 px-3 py-1 rounded-full text-slate-700">
+          Amigos FC · Strawhat Pirates · Red Bulls Eleven
+        </span>
+      </div>
+
+      <div class="border border-slate-200 rounded-xl divide-y text-sm">
+        <div class="flex items-center justify-between px-5 py-4">
+          <span class="font-medium">Amigos FC vs Strawhat Pirates</span>
+          <span class="text-slate-500">Matchday 1</span>
+        </div>
+        <div class="flex items-center justify-between px-5 py-4 bg-slate-50">
+          <span class="font-medium">Red Bulls Eleven vs Amigos FC</span>
+          <span class="text-slate-500">Matchday 2</span>
+        </div>
+        <div class="flex items-center justify-between px-5 py-4">
+          <span class="font-medium">Strawhat Pirates vs Red Bulls Eleven</span>
+          <span class="text-slate-500">Matchday 3</span>
+        </div>
+      </div>
     </div>
-    <div class="border rounded-xl p-4 flex justify-between">
-      <span>Red Bulls Eleven vs Amigos FC</span><span>Matchday 4</span>
-    </div>
+
   </div>
 </section>
 
